--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   shared_preferences: ^0.5.10
   background_fetch: ^0.6.0
   url_launcher: ^5.5.2
+  path_provider: 1.6.24
+  http: ^0.12.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
